Add change-environment to indicate changes made to the manuscript

--- a/review_response.tex
+++ b/review_response.tex
@@ -61,7 +61,10 @@
 	Everything else is really good.
 \end{revcomment}
 \begin{revresponse}
-	We totally agree.
+	We totally agree. We also added the following to the new version of the manuscript
+	\begin{change}
+		This really important sentence was added to the paper.
+	\end{change}
 \end{revresponse}
 
 % Reviewer 2
