--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -5,7 +5,7 @@ In this revision, we have carefully addressed the reviewers' comments. A summary
 
 \vspace{1.2em}
 
-Yours sincerely,
+Sincerely,
 
 \vspace{1.5em}
 
