--- a/review_response.tex
+++ b/review_response.tex
@@ -62,9 +62,9 @@
 \end{revcomment}
 \begin{revresponse}
 	We totally agree. We also added the following to the new version of the manuscript
-	\begin{change}
+	\begin{changes}
 		This really important sentence was added to the paper.
-	\end{change}
+	\end{changes}
 \end{revresponse}
 
 % Reviewer 2
