--- a/reviewresponse.sty
+++ b/reviewresponse.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{reviewresponse}[2020/04/27 Review Response]
+\ProvidesPackage{reviewresponse}[2020/08/12 Review Response]
 
 \RequirePackage{kvoptions}
 
@@ -44,10 +44,10 @@
 		\vspace{1cm}
 		\textbf{\LARGE{\@title}}\\
 		\vspace{1cm}
-		\Large{Addressed Comments for Publication to}
+		\large{Addressed Comments for Publication to}
 		
 		\Large{\reviewresponse@journal}
-		
+
 		\large{by}
 		
 		{\large{\@author}}
@@ -60,7 +60,7 @@
 	\@ifundefined{pdfbookmark}{}{%
 		\pdfbookmark[1]{Reponse to the Editor}{hyperref@editor}%
 	}%
-	\section*{Author's Response to the Editor}
+	\section*{Authors' Response to the Editor}
 }
 
 \newcommand{\reviewer}{
@@ -69,7 +69,7 @@
 	\@ifundefined{pdfbookmark}{}{%
 		\pdfbookmark[1]{Reviewer \arabic{reviewer@counter}}{hyperref@reviewer\arabic{reviewer@counter}}%
 	}%
-	\section*{Author's Response to Reviewer \arabic{reviewer@counter}}
+	\section*{Authors' Response to Reviewer \arabic{reviewer@counter}}
 }
 %%%
 
@@ -88,5 +88,5 @@
 	
 }{\vspace{4em}}
 
-\newenvironment{change}{\begin{tcolorbox}[breakable,colback={black!2}, colframe={black!20},enhanced jigsaw,]
+\newenvironment{changes}{\begin{tcolorbox}[breakable,colback={black!2}, colframe={black!20},enhanced jigsaw,]
 }{\end{tcolorbox}}
