--- a/review_response.tex
+++ b/review_response.tex
@@ -73,7 +73,7 @@
 	We have carefully addressed all the issues item by item as follows.
 \end{revresponse}
 
-\begin{revcomment}
+\begin{revcomment}\label{comment:work-not-good}
 	The work is not really good.
 \end{revcomment}
 \begin{revresponse}
@@ -90,5 +90,7 @@
 	Also check out our article \cite{Besser2020}.
 	
 	\printpartbibliography{ReviewerReference,Besser2020}
+	
+	And btw, your Comment~\ref{comment:work-not-good} was mean!
 \end{revresponse}
 \end{document}
