--- a/review_response.tex
+++ b/review_response.tex
@@ -7,6 +7,11 @@
 			manuscript={TWC-2020-X},
 			editor={Dr. Doom}]{reviewresponse}
 
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+%\usepackage{newcent}
+%\usepackage[scaled]{beramono}
+
 \usepackage[backend=biber,style=ieee,dashed=false,url=false,isbn=false]{biblatex}
 \bibliography{literature.bib}
 
@@ -15,12 +20,12 @@
 \title{My Awesome Paper Title}
 \author{Donald Duck and Mickey Mouse}
 
+
 \begin{document}
 \maketitle
 
 % Cover Letter
 \input{cover_letter.tex}
-
 
 % Response to Editor
 \editor
@@ -34,7 +39,6 @@
 		\item We removed our wrong statements in Section~I.
 	\end{enumerate}
 \end{revresponse}
-
 
 
 % Reviewer 1
