Change default parskip

--- a/reviewresponse.sty
+++ b/reviewresponse.sty
@@ -42,6 +42,7 @@
 
 %%% General Settings
 \setlength{\parindent}{0pt}
+\setlength{\parskip}{.3em plus .2em minus .3em}
 \renewcommand{\baselinestretch}{1.5}
 %%%
 
