Add refsection option to biblatex package and corresponding example in main file

--- a/literature.bib
+++ b/literature.bib
@@ -21,3 +21,18 @@
 	year = {1990},
 	pubstate = {This journal probably even exists...},
 }
+
+@article{Besser2021,
+	archivePrefix = {arXiv},
+	author = {Besser, Karl-Ludwig and Jorswieck, Eduard A.},
+	doi = {10.1109/TCOMM.2020.3026654},
+	eprint = {2004.06644},
+	journal = {IEEE Transactions on Communications},
+	month = {1},
+	number = {1},
+	pages = {443--456},
+	publisher = {IEEE},
+	title = {Bounds on the Secrecy Outage Probability for Dependent Fading Channels},
+	volume = {69},
+	year = {2021}
+}
