--- a/review_response.tex
+++ b/review_response.tex
@@ -12,7 +12,7 @@
 %\usepackage{newcent}
 %\usepackage[scaled]{beramono}
 
-\usepackage[backend=biber,style=ieee,dashed=false,url=false,isbn=false]{biblatex}
+\usepackage[backend=biber,style=ieee,dashed=false,url=false,isbn=false,defernumbers=true,refsection=section]{biblatex}
 \bibliography{literature.bib}
 
 \usepackage{hyperref}
@@ -96,5 +96,21 @@
 	\printpartbibliography{ReviewerReference,Besser2020}
 	
 	And btw, your Comment~\ref{comment:work-not-good} was mean!
+\end{revresponse}
+
+
+\reviewer
+\begin{revcomment}
+	Did you know, that the references can be separated for the individual reviewers?
+\end{revcomment}
+\begin{revresponse}
+	Yes. When using \href{https://www.ctan.org/pkg/biblatex}{biblatex}, you can use the \texttt{refsection=section} option to achieve that.
+	If we cite a new reference like \cite{Besser2021} here, it will again be number [1].
+	
+	Note that you might have to run \texttt{pdflatex} and \texttt{biber} multiple times.
+	
+	And reference [1] for Reviewer 2~\cite{ReviewerReference} is now number [2].
+	
+	\printpartbibliography{Besser2021,ReviewerReference}
 \end{revresponse}
 \end{document}
