Close #1; Change default language from USenglish to american

--- a/review_response.tex
+++ b/review_response.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,USenglish]{scrartcl}
+\documentclass[12pt,american]{scrartcl}
 \usepackage{babel}
 \usepackage[babel]{microtype}
 \usepackage[babel]{csquotes}
