Add widow and orphan penalty
Add a strict widow and orphan penalty to the package file. This avoids
widow and orphan lines in (nearly) all situations

--- a/reviewresponse.sty
+++ b/reviewresponse.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{reviewresponse}[2021/11/10 Review Response v1.2]
+\ProvidesPackage{reviewresponse}[2022/10/18 Review Response v1.2.1]
 % Author: Karl-Ludwig Besser
 % Email: k.besser@tu-bs.de
 
@@ -33,8 +33,6 @@
 %\definecolor{colorlight}{RGB}{102,180,211}
 %\colorlet{colorcommentbg}{colorlight!20}
 
-
-
 \colorlet{colorchangebg}{black!2}
 \colorlet{colorchangeframe}{black!20}
 %%%
@@ -44,6 +42,9 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{.3em plus .2em minus .3em}
 \renewcommand{\baselinestretch}{1.5}
+
+\widowpenalty10000
+\clubpenalty10000
 %%%
 
 %%% Counters
