--- a/literature.bib
+++ b/literature.bib
@@ -19,7 +19,7 @@
 	title = {My work is better than yours},
 	journaltitle = {International Journal of Science},
 	year = {1990},
-	pubstate = {This journal probably even exists...},
+	pubstate = {This journal probably actually exists...},
 }
 
 @article{Besser2021,
