Add autorefname for review comments
Change reviewer and revcomment counters and provide autorefname for
review comments.

--- a/review_response.tex
+++ b/review_response.tex
@@ -103,7 +103,7 @@
 	
 	\printpartbibliography{ReviewerReference,Besser2020}
 	
-	And btw, your Comment~\ref{comment:work-not-good} was mean!
+	And btw, your \autoref{comment:work-not-good} was mean! (We can use the \verb|\autoref| command.)
 \end{revresponse}
 
 
