Add autorefname for reviewers

--- a/review_response.tex
+++ b/review_response.tex
@@ -78,6 +78,7 @@
 
 % Reviewer 2
 \reviewer
+\label{rev:2}
 \begin{generalcomment}
 	In general, the work is well-written. However, I have the following concerns.
 \end{generalcomment}
@@ -117,7 +118,7 @@
 	
 	Note that you might have to run \texttt{pdflatex} and \texttt{biber} multiple times.
 	
-	And reference [1] for Reviewer 2~\cite{ReviewerReference} is now number [2].
+	And reference [1] for \autoref{rev:2}~\cite{ReviewerReference} is now number [2].
 	
 	\printpartbibliography{Besser2021,ReviewerReference}
 \end{revresponse}
