Add default PDF properties with hyperref
Add default values for the title, author, and keywords properties when
the hyperref package is loaded

--- a/reviewresponse.sty
+++ b/reviewresponse.sty
@@ -113,4 +113,20 @@
 
 
 \providecommand*{\revcommentautorefname}{Comment}
+\AddToHook{package/hyperref/after}{
+\hypersetup{
+	bookmarksopen,
+	pdfcreator={LaTeX with the reviewresponse package},
+	pdfusetitle,
+}
+}
+\AddToHook{begindocument/before}{
+\IfPackageLoadedTF{hyperref}{
+\hypersetup{
+	pdfauthor={\@author},
+	pdftitle={\@title{} -- Review Response},
+	pdfkeywords={\journal{}, \manuscript{}, review response}
+}
+}{}
+}
 \AddToHook{begindocument/end}{\def\sectionautorefname{Reviewer}}
