--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -1,13 +1,15 @@
-Dear \editorname,
+Dear \theeditor,
 
-Please find enclosed the revised version of our previous submission entitled \enquote{\thetitle} with manuscript number \manuscript. We would like to thank you and the reviewers for the valuable comments which help improving the quality of our manuscript.
-In this revision, we have carefully addressed the reviewers' comments. A summary of main modifications and a detailed point-by-point response to the comments from Reviewers 1 and 3 (following the reviewers' order in the decision letter) are given below.
+Please find enclosed the revised version of our previous submission entitled \enquote{\thetitle} with manuscript number \manuscript.
+We would like to thank you and the reviewers for the valuable comments which help improving the quality of our manuscript.
+In this revision, we have carefully addressed the reviewers' comments.
+A summary of main modifications and a detailed point-by-point response to the comments from Reviewers 1 to 3 (following the reviewers' order in the decision letter) are given below.
 
 \vspace{1.2em}
 
 Sincerely,
 
-\vspace{1.5em}
+\vspace{1.7em}
 
 \theauthor
 
