--- a/review_response.tex
+++ b/review_response.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,english]{scrartcl}
+\documentclass[12pt,english]{reviewresponse}
 
 %% Language
 \usepackage{babel}
@@ -12,12 +12,6 @@
 %\usepackage[scaled]{beramono} % different monospace font
 
 
-%% Review Response
-\usepackage[journal={IEEE Transactions on Wireless Communications},
-			manuscript={TWC-2020-X},
-			editor={Dr. Doom}]{reviewresponse}
-
-
 %% Bibliography
 \usepackage[backend=biber,style=ieee,dashed=false,url=false,isbn=false,defernumbers=true,refsection=section]{biblatex}
 \bibliography{literature.bib}
@@ -27,7 +21,9 @@
 
 \title{My Awesome Paper Title}
 \author{Donald Duck and Mickey Mouse}
-
+\journal{IEEE Transactions on Wireless Communications}
+\manuscript{TWC-2020-X}
+\editorname{Dr. Doom}
 
 \begin{document}
 \maketitle
