Fix missing manuscript number in cover letter
- Add new `\themanuscript` macro to access the manuscript number in the
  cover letter
- Bump version to 2.0.1

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -1,6 +1,6 @@
 Dear \theeditor,
 
-Please find enclosed the revised version of our previous submission entitled \enquote{\thetitle} with manuscript number \manuscript.
+Please find enclosed the revised version of our previous submission entitled \enquote{\thetitle} with manuscript number \themanuscript.
 We would like to thank you and the reviewers for the valuable comments which help improving the quality of our manuscript.
 In this revision, we have carefully addressed the reviewers' comments.
 A summary of main modifications and a detailed point-by-point response to the comments from Reviewers 1 to 3 (following the reviewers' order in the decision letter) are given below.
