add concludingresponse env

--- a/review_response.tex
+++ b/review_response.tex
@@ -43,6 +43,10 @@
 		\item We removed our wrong statements in Section~I.
 	\end{enumerate}
 \end{revresponse}
+\begin{concludingresponse}[to the Editor]
+	Thank you for your valuable comments on our manuscript. 
+	We have done our best to incorporate changes to reflect the suggestions, which allowed us to improve the quality of our work.
+\end{concludingresponse}
 
 
 % Reviewer 1
@@ -71,6 +75,10 @@
 		This really important sentence was added to the paper.
 	\end{changes}
 \end{revresponse}
+
+\begin{concludingresponse}[]
+	Thank you for your valuable comments on our manuscript. 
+\end{concludingresponse}
 
 % Reviewer 2
 \reviewer
