--- a/reviewresponse.cls
+++ b/reviewresponse.cls
@@ -28,10 +28,11 @@
 \newcommand*{\themanuscript}{\@manuscript}
 
 %%% Colors
-\definecolor{colorcommentfg}{RGB}{0,63,87}
+\definecolor{colorconcluderesponsefg}{RGB}{0,63,87}
 \definecolor{colorcommentbg}{HTML}{e0f0f6}
 \definecolor{colorcommentframe}{RGB}{0,112,155}
 
+\colorlet{colorchangefg}{black!80}
 \colorlet{colorchangebg}{black!2}
 \colorlet{colorchangeframe}{black!20}
 %%%
@@ -94,7 +95,7 @@
 
 %%% Blocks %%%
 \newenvironment{generalcomment}{%
-	\begin{tcolorbox}[attach title to upper, title={General Comments}, after title={.\enskip}, fonttitle={\bfseries}, coltitle={colorcommentfg}, colback={colorcommentbg}, colframe={colorcommentframe},]
+	\begin{tcolorbox}[attach title to upper, title={General Comments}, after title={.\enskip}, fonttitle={\bfseries}, coltitle={colorconcluderesponsefg}, colback={colorcommentbg}, colframe={colorcommentframe},]
 	}{\end{tcolorbox}}
 
 \newenvironment{revcomment}[1][]{\refstepcounter{revcomment}
@@ -104,6 +105,10 @@
 \newenvironment{revresponse}[1][{Thank you for the comment.}]{%
 	\textbf{Response:} #1\par
 }{\vspace{4em plus 0.2em minus 1.5em}}
+
+\newenvironment{concludingresponse}[1][]{%
+	\begin{tcolorbox}[attach title to upper, title={Concluding Response #1}, after title={.\enskip}, fonttitle={\bfseries}, coltitle={colorchangefg}, colback={colorchangebg}, colframe={colorchangeframe},]
+	}{\end{tcolorbox}}
 
 \newenvironment{changes}{\begin{tcolorbox}[breakable,colback={colorchangebg}, colframe={colorchangeframe},enhanced jigsaw,]
 	}{\end{tcolorbox}}
