change "concluderesponse" to "concludingresponse"

--- a/reviewresponse.cls
+++ b/reviewresponse.cls
@@ -35,9 +35,9 @@
 \colorlet{colorchangebg}{black!2}
 \colorlet{colorchangeframe}{black!20}
 
-\colorlet{colorconcluderesponsefg}{black!80}
-\colorlet{colorconcluderesponsebg}{black!2}
-\colorlet{colorconcluderesponseframe}{black!20}
+\colorlet{colorconcludingresponsefg}{black!80}
+\colorlet{colorconcludingresponsebg}{black!2}
+\colorlet{colorconcludingresponseframe}{black!20}
 %%%
 
 
@@ -110,7 +110,7 @@
 }{\vspace{4em plus 0.2em minus 1.5em}}
 
 \newenvironment{concludingresponse}[1][]{%
-	\begin{tcolorbox}[attach title to upper, title={Concluding Response #1}, after title={.\enskip}, fonttitle={\bfseries}, coltitle={colorconcluderesponsefg}, colback={colorconcluderesponsebg}, colframe={colorconcluderesponseframe},]
+	\begin{tcolorbox}[attach title to upper, title={Concluding Response #1}, after title={.\enskip}, fonttitle={\bfseries}, coltitle={colorconcludingresponsefg}, colback={colorconcludingresponsebg}, colframe={colorconcludingresponseframe},]
 	}{\end{tcolorbox}}
 
 \newenvironment{changes}{\begin{tcolorbox}[breakable,colback={colorchangebg}, colframe={colorchangeframe},enhanced jigsaw,]
