--- a/review_response.tex
+++ b/review_response.tex
@@ -20,7 +20,11 @@
 
 
 \title{My Awesome Paper Title}
-\author{Donald Duck and Mickey Mouse}
+\author{Donald Duck\affil{1,*} and Mickey Mouse\affil{2}}
+\affiliations{
+	\affiliation{1}{Department of Quacking, Duck University, Duckburg, USA}
+	\affiliation{2}{Department of Mousing, Mouse University, Mouseton, USA}
+}
 \journal{IEEE Transactions on Wireless Communications}
 \manuscript{TWC-2020-X}
 \editorname{Dr. Doom}
