Change `\the...` commands to `\print...` commands to avoid issue with biblatex
Biblatex already defines commands like `\theauthor` and `\theeditor`,
which created a warning with this class. Therefore, the `\the...`
commands are renamed to `\print...`.

--- a/reviewresponse.cls
+++ b/reviewresponse.cls
@@ -23,11 +23,11 @@
 \newcommand*{\affiliations}[1]{\renewcommand*{\@affiliations}{#1}}
 \newcommand*{\@affiliations}{}
 
-\newcommand*{\thetitle}{\@title}
-\newcommand*{\theauthor}{\@author}
-\newcommand*{\thedate}{\@date}
-\newcommand*{\theeditor}{\@editorname}
-\newcommand*{\themanuscript}{\@manuscript}
+\newcommand*{\printtitle}{\@title}
+\newcommand*{\printauthor}{\@author}
+\newcommand*{\printdate}{\@date}
+\newcommand*{\printeditor}{\@editorname}
+\newcommand*{\printmanuscript}{\@manuscript}
 
 %%% Colors
 \definecolor{colorcommentfg}{RGB}{0,63,87}
