--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -1,6 +1,6 @@
-Dear \theeditor,
+Dear \printeditor,
 
-Please find enclosed the revised version of our previous submission entitled \enquote{\thetitle} with manuscript number \themanuscript.
+Please find enclosed the revised version of our previous submission entitled \enquote{\printtitle} with manuscript number \printmanuscript.
 We would like to thank you and the reviewers for the valuable comments which help improving the quality of our manuscript.
 In this revision, we have carefully addressed the reviewers' comments.
 A summary of main modifications and a detailed point-by-point response to the comments from Reviewers 1 to 3 (following the reviewers' order in the decision letter) are given below.
@@ -11,7 +11,7 @@ Sincerely,
 
 \vspace{1.7em}
 
-\theauthor
+\printauthor
 
 \vfil
 \textbf{Note:} To enhance the legibility of this response letter, all the editor's and reviewers' comments are typeset in boxes. Rephrased or added sentences are typeset in color. The respective parts in the manuscript are highlighted to indicate changes.
