Improve linespacing and parindent and adapt best practice
It is discouraged to redefine the baselinestretch. Instead, the
setspace(enhanced) package is now used to do this. Additionally, the
paragraph spacing is now also done through the KOMA-script option.

--- a/reviewresponse.cls
+++ b/reviewresponse.cls
@@ -5,10 +5,12 @@
 
 \RequirePackage{kvoptions}
 
+\PassOptionsToClass{parskip=half-}{scrartcl}
 \DeclareOption*{\PassOptionsToClass{\CurrentOption}{scrartcl}}
 \ProcessOptions\relax
 \LoadClass{scrartcl}
 
+\RequirePackage[onehalfspacing]{setspaceenhanced}
 
 \RequirePackage[breakable,skins]{tcolorbox}
 \RequirePackage{xcolor}
@@ -44,9 +46,9 @@
 
 
 %%% General Settings
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{.3em plus .2em minus .3em}
-\renewcommand{\baselinestretch}{1.5}
+%\setlength{\parindent}{0pt}
+%\setlength{\parskip}{.3em plus .2em minus .3em}
+%\renewcommand{\baselinestretch}{1.5}
 
 \widowpenalty10000
 \clubpenalty10000
