Restructure affiliation commands
The commands to specify and print the authors' affiliations have been
restructured.

- `\affiliations` has been changed to `\affiliation`
- `\affil` only takes a single argument now
- Hiding the affiliation marks in the cover letter and hyperref
  properties is done by redefining `\affil`

--- a/reviewresponse.cls
+++ b/reviewresponse.cls
@@ -22,11 +22,12 @@
 \newcommand*{\@editorname}{}
 \newcommand*{\manuscript}[1]{\renewcommand*{\@manuscript}{#1}}
 \newcommand*{\@manuscript}{}
-\newcommand*{\affiliations}[1]{\renewcommand*{\@affiliations}{#1}}
-\newcommand*{\@affiliations}{}
+\newcommand*{\affiliation}[1]{\renewcommand*{\@affiliation}{#1}}
+\newcommand*{\@affiliation}{}
+\newcommand*{\affil}[1]{$^{#1}$}
 
 \newcommand*{\printtitle}{\@title}
-\newcommand*{\printauthor}{\@author}
+\newcommand*{\printauthor}{\begingroup\renewcommand*{\affil}[1]{\@bsphack\@esphack}\@author\endgroup}
 \newcommand*{\printdate}{\@date}
 \newcommand*{\printeditor}{\@editorname}
 \newcommand*{\printmanuscript}{\@manuscript}
@@ -59,29 +60,6 @@
 \setcounter{reviewer}{0}
 \newcounter{revcomment}[reviewer]
 \setcounter{revcomment}{0}
-%%%
-
-%%% Affiliation Display Settings
-% Affiliation display
-% 0=no display, 1=number only, 2=full
-\newcount\@affilmode
-\@affilmode=0
-\newcommand{\setaffilhide}{\@affilmode=0}
-\newcommand{\setaffilnumber}{\@affilmode=1}
-\newcommand{\setaffilfull}{\@affilmode=2}
-\setaffilhide
-
-\def\affil#1#2{\ifcase\@affilmode
-	\relax
-\or
-	\relax{$^{#1}$\ignorespaces\relax}
-\or
-	\vskip-.5\parskip\relax{\centering{\footnotesize
-	$^{#1}$#2\relax}\vskip-\parskip}
-\else
-	% raise error
-	\@latex@error{Invalid \string\@affilmode value: \the\@affilmode}\@ehc
-\fi}
 %%%
 
 %%% Commands
@@ -157,11 +135,14 @@
 }
 \AddToHook{begindocument/before}{
 	\IfPackageLoadedTF{hyperref}{
+		\begingroup
+		\renewcommand*{\affil}[1]{\@bsphack\@esphack}
 		\hypersetup{
 			pdfauthor={\@author},
 			pdftitle={Review Response -- \@title{}},
 			pdfkeywords={\@journal{}, \@manuscript{}, review response}
 		}
+		\endgroup
 	}{}
 }
 \AddToHook{begindocument/end}{\def\sectionautorefname{Reviewer}}
