--- a/review_response.tex
+++ b/review_response.tex
@@ -20,10 +20,10 @@
 
 
 \title{My Awesome Paper Title}
-\author{Donald Duck\affil{1,*}{} and Mickey Mouse\affil{2}{}}
-\affiliations{
-	\affil{1}{Department of Quacking, Duck University, Duckburg, USA}
-	\affil{2}{Department of Mousing, Mouse University, Mouseton, USA}
+\author{Donald Duck\affil{1,*} and Mickey Mouse\affil{2}}
+\affiliation{
+	\affil{1} Department of Quacking, Duck University, Duckburg, USA\\
+	\affil{2} Department of Mousing, Mouse University, Mouseton, USA
 }
 \journal{IEEE Transactions on Wireless Communications}
 \manuscript{TWC-2020-X}
